--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         </activity>
         <activity android:name=".Px_Activity" />
         <activity android:name=".Color_Activity" />
-        <activity android:name=".View_Activity"></activity>
+        <activity android:name=".View_Activity" />
+        <activity android:name=".LTS_Activity" />
+        <activity android:name=".Spinner_Activity"></activity>
     </application>
 
 </manifest>
