--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".View_Activity" />
         <activity android:name=".LTS_Activity" />
         <activity android:name=".Spinner_Activity" />
-        <activity android:name=".Calender_Activity"></activity>
+        <activity android:name=".Calender_Activity" />
+        <activity android:name=".ViewPage_Activity"></activity>
     </application>
 
 </manifest>
