--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".LTS_Activity" />
         <activity android:name=".Spinner_Activity" />
         <activity android:name=".Calender_Activity" />
-        <activity android:name=".ViewPage_Activity"></activity>
+        <activity android:name=".ViewPage_Activity" />
+        <activity android:name=".QDY_Activity"></activity>
     </application>
 
 </manifest>
